# rgp-wagtail

./: .gitignore  deploy.bat
backend/: .env  .env.example  manage.py  pyproject.toml
backend/config/: urls.py
backend/config/settings/: base.py  prod.py
backend/home/: blocks.py  models.py
backend/home/migrations/: 0001_initial.py  0002_homepage_property_listing_block.py
backend/listings/: api.py  models.py  urls.py  wagtail_hooks.py
backend/listings/migrations/: 0001_initial.py  0002_listing_show_in_property_listing.py
backend/rgp_wagtail_backend.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
backend/templates/: base.html
backend/templates/home/: home_page.html
frontend/: .gitignore  btn1.html  btn2.html  footer.html  framer.html  index.html  loader.html  new.html  package-lock.json  package.json  parse-reviews.js  review.html  slow-marqee.html  team.html  tsconfig.app.json  vite.config.ts
frontend/.claude/: settings.local.json
frontend/.github/workflows/: deploy.yml
frontend/src/: App.tsx  declarations.d.ts  index.css  main.tsx  test.tsx
frontend/src/components/: BtnPrimary.css  BtnPrimary.tsx  BtnSecondary.css  BtnSecondary.tsx  DummyHero.css  DummyHero.tsx  Header.css  Header.tsx  Menu.css  Menu.tsx  Popup.css  Popup.tsx  Preloader.css  Preloader.tsx
frontend/src/data/: listingProperties.ts  properties.ts
frontend/src/lib/: gsapSwitchAnimations.js  listingsApi.ts  wagtailApi.ts
frontend/src/pages/: AboutPage.css  AboutPage.tsx  AboutTobe.tsx  ContactPage.css  ContactPage.tsx  CookiesPage.tsx  HomePage.tsx  LegalPage.css  (+9 more)
(+37 files in other folders)
