[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "rgp-wagtail-backend"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
  "Django>=5.0,<5.2",
  "wagtail>=7.2,<8.0",
  "psycopg[binary]>=3.1,<4.0",
  "django-environ>=0.11,<1.0",
  "django-cors-headers>=4.3,<5.0",
  "whitenoise>=6.6,<7.0",
]

[tool.uv]
package = false

[tool.setuptools]
packages = ["home", "config"]
